
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________

2020 OCT 11b
   * in tools/gitnewversion_public.sh
     - added line "git remote set-url origin git@github.com:bernardparent/TEXCLASS" so that
       no password is asked for when pushing to git if a ssh key has been uploaded to github
  

2020 OCT 11a
  * in model/chem
    - added _H2_Air_Plasma_18s
  * in model/emfield/_Epotential-Te/emfield.c
    - in find_Sstar_emfield(), made Te set to _Te(np[l]) instead of _Te_EMF(np[l],gl)


2020 OCT 04a
  * in model/emfield/_Epotential-Te/emfield.c
    - in find_linearization_coefficients_inner_node_emfield_OHMBASED(), multiplied the linearization
      coefficients of the thermal diffusion by 1.25
    - in find_Fstar_interface_emfield(), changed dTeEMFdXj-0.2*dTedXj to 1.25*dTeEMFdXj-dTedXj to
      yield the same discretization stencil as in model/fluid/_*Plasma*/fluid.c
  * in model/emfield/_Epotential-Te/emfield.hh
    - fixed a bug: defaultinitvartypeemfield should be 1 not 2
  * in model/share/chem_share.c
    - commented out add_to_dQei() when speceminus is not defined
  * in src/data.c
    - in read_data_file(), added initialization of gl->nsinit and gl->initspecies
  * in src/post.c
    - in create_domain_of_cuts_along_x(), added initialization of gl->nsinit and gl->initspecies
    

2020 OCT 01a
  * in model/chem/_H2_Air_Plasma_13s/chem.c and model/chem/_H2_Cs_Air_Plasma_15s/chem.c
    - changed the EXPIONIZATIONREACTION[6] to the curve fit from BOLSIG+ instead of the expression
      from Mendez
  * in model/chem/_H2_Cs_Air_Plasma_15s/doc/report.tex and model/chem/_H2_Air_Plasma_13s/doc/report.tex
    - changed the hydrogen townsend ionization to curve fit from BOLSIG+ instead of the expression 
      from Mendez