@@ -88,8 +88,8 @@ xs3=0.23; {start of second electrode}
 xs4=0.233; {end of second electrode}
 xe=0.25+0.06; {end of domain}
 
-ys=0;  {start of hydrogen injection}
-ys0=0.0009; {end of hydrogen injection}
+ys=0;  {start of jet}
+ys0=0.0009; {end of jet}
 ys1=0.0018; {end of arc influence}
 ye=0.02; {end of domain}
 
@@ -106,7 +106,7 @@ js=1;
 js1=round(40*mf);
 je=js1+round(20*mf);
 
-dwall=15e-6;
+dwall=15e-6/mf;
 
 Grid(
   Size(is,js, ie,je);
@@ -164,11 +164,11 @@ Bdry(
     BDRY_FREESTREAM1                   2   Freestream, 1o, params Vx,Vy, P, T
     _________________________________________________________________________________________
     }
-    Twall=1000.0;
-    All(BDRY_WALLTFIXED1,Twall);
+    Twall=500.0;
+    All(BDRY_WALLADIABATIC1);
     Plane("i",is,BDRY_INFLOWSUPERSONIC);
     Plane("i",ie,BDRY_OUTFLOWSUPERSONIC1);
-    Plane("j",js,BDRY_WALLTFIXED1,Twall);
+    Plane("j",js,BDRY_WALLADIABATIC1,Twall);
     Plane("j",je,BDRY_OUTFLOWSUPERSONIC1);
 
     {
@@ -210,7 +210,7 @@ Model(
     RAPCOMP=NO;
     MHDTURB=NO;
     TURBSOURCE=YES;
-    TEMODEL=TEMODEL_TRANSPORT;
+    TEMODEL=TEMODEL_LOCAL;
     N2VIBMODEL=N2VIBMODEL_MACHERET;
     N2VIBJOULEHEATING=NO;
     REACTING=YES;
@@ -223,7 +223,7 @@ Model(
     sigmadiv=1e-6; {S/m}
     etdiv=1e2;     {J/kg}
     Pmin=1.0e-2;    Pmax=9.9e99;   {Pa}
-    Tmin=2.0e1;     Tmax=16.0e3;    {K}
+    Tmin=2.0e2;     Tmax=16.0e3;    {K}
     Tvmin=Tmin;     Tvmax=12.0e3;  {K}
     Temin=Tmin;     Temax=60.0e3;  {K}
     Twmin=Tmin;     Twmax=Tmax;    {K}
@@ -237,7 +237,7 @@ Model(
     AXISYMMETRIC=NO;
   );
   Epotential(
-    Te_buffer=1000.0;    {"buffer" electron temp. in K needed when determining mue: Te=max(Te,T+Te_buffer);  
+    Te_buffer=300.0;    {"buffer" electron temp. in K needed when determining mue: Te=max(Te,T+Te_buffer);  
                        needed to prevent convergence hangs where |E| becomes close to 0;
                        set to as little a value as possible}
     Jmax=200000000.0;     {the maximum current density in A/m2 expected in the domain; this will affect only
@@ -272,48 +272,48 @@ Init(
     (b) In the freestream make sure that 1E-5*q_infty^2/ReL<k<0.1*q_infty^2/ReL.
     }
     
-        {AIR STREAM  (obtained for a scramjet flight Mach number of 11 using a dynamic pressure of 65000 Pa in standard US atmosphere after 2 oblique shocks)}
-    Vx=3100; {m/s}
+     Species("e-","O2+","H2","Cs","O2","N2","default");
+   
+        {AIR STREAM  (obtained for a scramjet flight Mach number of 6 using a dynamic pressure of 30000 Pa in standard US atmosphere after 2 oblique shocks)}
+    M=2.57;
+    T=800; {K}
+    P=37400; {Pa}
+
+    Vx=M*sqrt(1.4*287*T); {m/s}
     Vy=0; {m/s}
-    P=44000; {Pa}
-    T=1150; {K}
     k=1e-6;   {J/kg}
     psi=110*sqrt(Vx^2+Vy^2)+1000; {1/s for TURBMODEL_KOMEGA*}
     Tv=T; {K}
     Te=T; {K}
     chi_eminus=1e-12;
     chi_O2plus=1e-12;
-    chi_H2=1.0e-30;
-    chi_O2=0.21;
-    chi_N2=0.79;
+    chi_H2=0.2;    
+    chi_Cs=1e-20;
+    chi_O2=0.21*(1-chi_H2-chi_Cs);
+    chi_N2=0.79*(1-chi_H2-chi_Cs);
     chi_default=1.0e-30;
-    Species("e-","O2+","H2","O2","N2","default");
-    All(INIT_TYPE6,Vx,Vy,P,T,chi_eminus,chi_O2plus,chi_H2,chi_O2,chi_N2,chi_default,k,psi,Tv,Te);
-    mdot_Air=Vx*(P/T/286)*(ye-ys0);
+    All(INIT_TYPE6,Vx,Vy,P,T,chi_eminus,chi_O2plus,chi_H2,chi_Cs,chi_O2,chi_N2,chi_default,k,psi,Tv,Te);
 
     
-     {H2 STREAM}
-    Vx=5700; {m/s}
+     {JET STREAM}
+    Vx=Vx; {m/s}
     Vy=0; {m/s}
     P=P; {Pa}
-    T=200; {K}
+    T=T; {K}
     k=1e-6;   {J/kg}
     psi=110*sqrt(Vx^2+Vy^2)+1000; {1/s for TURBMODEL_KOMEGA*}
     Tv=T; {K}
     Te=T; {K}
     chi_eminus=1e-12;
     chi_O2plus=1e-12;
-    chi_Cs=1e-3;
-    chi_H2=1.0e0-chi_Cs;
-    chi_O2=1.0e-30;
-    chi_N2=1.0e-30;
-    Species("e-","O2+","H2","O2","N2","Cs","default");
+    chi_H2=0.2;    
+    chi_Cs=0.05;
+    chi_O2=0.21*(1-chi_H2-chi_Cs);
+    chi_N2=0.79*(1-chi_H2-chi_Cs);
+    chi_default=1.0e-30;
 
-    Region(is,js,  ie,js1, INIT_TYPE6,Vx,Vy,P,T,chi_eminus,chi_O2plus,chi_H2,chi_O2,chi_N2,chi_Cs,chi_default,k,psi,Tv,Te);
+    Region(is,js,  ie,js1, INIT_TYPE6,Vx,Vy,P,T,chi_eminus,chi_O2plus,chi_H2,chi_Cs,chi_O2,chi_N2,chi_default,k,psi,Tv,Te);
 
-    mdot_H2=Vx*(P/T/4124)*ys0;
-    Tstag_H2=(1+(1.666-1)/2*(Vx/sqrt(1.66*4124*T))^2)*T;
-    printf("\n mdot_H2/mdot_Air=%E   Tstag_H2=%E K\n",mdot_H2/mdot_Air,Tstag_H2);
     
   );
   Epotential(
@@ -329,9 +329,6 @@ Init(
     }
     phi=0.0; {V}
     All(INITEMF_TYPE1,phi);
-    Deltaphi=3000;
-    Region(is1,js,  is2,js,INITEMF_TYPE1,-Deltaphi/2);
-    Region(is3,js,  is4,js,INITEMF_TYPE1,Deltaphi/2);
   );
 );
 
@@ -394,7 +391,7 @@ Cycle(
                            near cathode}
     relaxNi_bdry=1.0;     {the ion density relaxation factor at the boundary }
     relaxNe_bdry=0.2;     {the electron density relaxation factor at the boundary }
-    relaxTe=0.9;          {the electron temperature relaxation factor }
+    relaxTe=0.8;          {the electron temperature relaxation factor }
     rhoref=0.1;           {reference density in kg/m3}
     Tref=300.0;           {reference temperature in K}
     Teref=20000.0;        {reference electron temperature in K}
@@ -444,41 +441,43 @@ Cycle(
     ,{else}
       if (iter<1000,
         CFLmax=1.8;
-        sigma1=0.0;
       ,{else}
         CFLmax=2.8;
-        sigma1=0.0;
       );
     );
-    system("date");
     if (iter<3000,
-      Model(FavreReynoldsPlasma(REACTING=NO;););
+      Model(FavreReynoldsPlasma(REACTING=YES;););
     ,{else}
       Model(FavreReynoldsPlasma(REACTING=YES;););
     );    
+    system("date");
     CFL=min(CFL*1.15,CFLmax);
     UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2);
     Lc=3e3;      {characteristic length scale in meters used to solve the emfield equation}
-    relaxEMF=0.9; {relaxation factor forced on the update of the emfield variables}
-    UpdateEMField(Lc,relaxEMF,TSEMF_SOR,200); 
+    relaxEMF=0.3; {relaxation factor forced on the update of the emfield variables}
+    UpdateEMField(Lc,relaxEMF,TSEMF_SOR,200); {optional extra parameters:  tsemfmethod [TSEMF_ADI, TSEMF_DDADI, TSEMF_IMAF, etc] and numsubiter_tsemf [default: 4] if supported}
     printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld)  %E (%4ld,%4ld)  %s\n",
            CFL,iter,effiter_U,ximax,i_ximax,
            j_ximax,ximax_emfield,i_ximax_emfield,j_ximax_emfield,clipinfo);
   );
 
   DualTimeStepping(
-    Vpp=3500; {peak to peak voltage difference applied between electrodes}
-    number_of_periods=12;
+    Vpp=7000; {peak to peak voltage difference applied between electrodes}
+    number_of_periods=10;
     period=50e-6; {time of one period}
-    time_within_period=time-period*floor(time/period);
-    dischargeduration=5e-6; {time spent in discharge in seconds}
+    time_within_period=time-(period*floor((time+10e-15)/period));
+    dischargeduration=6e-7; {time spent in discharge in seconds}
     dt_discharge=dischargeduration/(20*mf);   {physical time step in seconds}
-    dt_nodischarge=period/(15*mf);
-    itermax_discharge=60;
-    itermax_nodischarge=20;
+    dt_nodischarge=(period-dischargeduration)/(15*mf);
+    itermax_discharge=150;
+    itermax_nodischarge=50;
     tmax=period*number_of_periods;    {simulation time span in seconds}
     sigma1=0.0;   {exponent of maximum pseudotime step in all dimensions}
     sigma2=0.0;   {exponent of maximum pseudotime step in all fluxes}
+    if (iter==1,
+      CFL=0.01;
+    );
+    CFL=min(CFL*1.5,1.8);
     if (time_within_period<dischargeduration/2,
       Deltaphi=max(0,time_within_period/(0.5*dischargeduration)*Vpp);
     ,{else}
@@ -486,17 +485,9 @@ Cycle(
     );
     
     if (time_within_period<dischargeduration,
-      if (iter==1,
-        CFL=0.03;
-      );
-      CFL=min(CFL*1.5,2.2);
       dt=dt_discharge;
       itermax=itermax_discharge;
     ,{else}
-      if (iter==1,
-        CFL=0.5;
-      );
-      CFL=min(CFL*1.5,3.0);
       time_within_next_period=time+dt_nodischarge-period*floor((time+dt_nodischarge)/period);
       if (time_within_next_period<dischargeduration,
         dt=dt_nodischarge-time_within_next_period;
@@ -513,23 +504,21 @@ Cycle(
     UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2,dt);
     Lc=10;      {characteristic length scale in meters used to solve the emfield equation}
     relaxEMF=0.8; {relaxation factor forced on the update of the emfield variables}
-    UpdateEMField(Lc,relaxEMF,dt,TSEMF_SOR,600); 
-    UpdateEMField(Lc,relaxEMF,dt,TSEMF_SOR,600); 
-    UpdateEMField(Lc,relaxEMF,dt,TSEMF_SOR,600); 
-    {optional extra parameters:  tsemfmethod [TSEMF_ADI, TSEMF_DDADI, TSEMF_IMAF, etc] and numsubiter_tsemf [default: 4] if supported}
-    printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld)  %E (%4ld,%4ld)  %s\n",
+    UpdateEMField(Lc,relaxEMF,dt,TSEMF_SOR,200); 
+    UpdateEMField(Lc,relaxEMF,dt,TSEMF_SOR,200); 
+    
+    printf("%6.2f %6ld %9.3f   %E (%4ld,%4ld)  %E (%4ld,%4ld)  %E %E %E %E %E %s\n",
            CFL,iter,effiter_U,ximax,i_ximax,
-           j_ximax,ximax_emfield,i_ximax_emfield,j_ximax_emfield,clipinfo);
+           j_ximax,ximax_emfield,i_ximax_emfield,j_ximax_emfield,time_within_period,period,time,dt_discharge,dt_nodischarge,clipinfo);
     if (iter>itermax,
       IncreaseTimeLevel();
-      WriteDataFile(outputfilename"."round(time/min(dt_discharge,dt_nodischarge)));
+      WriteDataFile(outputfilename"."100000 + round(time/min(dt_discharge,dt_nodischarge)));
       printf("dt=%E time=%Es\n",dt,time);
       if (time>tmax-0.1*dt,
         exit(EXIT_SUCCESS);
       );
     );
   );
-
 
 );
 
