@@ -48,13 +48,21 @@ int main ( int argc, char **argv ) {
   m_flag = FALSE;
   l_flag = FALSE;
 
-  if ( chkarg ( argc, argv, "-m" ) != 0 ) {
+  if ( chkarg ( argc, argv, "-M" ) != 0 ) {
     m_flag = TRUE;
-    sscanf ( argv[chkarg ( argc, argv, "-m" ) + 1], "%lg", &M1 );
+    sscanf ( argv[chkarg ( argc, argv, "-M" ) + 1], "%lg", &M1 );
   }
-  if ( chkarg ( argc, argv, "-l" ) != 0 ) {
+  if ( chkarg ( argc, argv, "-L" ) != 0 ) {
     l_flag = TRUE;
-    sscanf ( argv[chkarg ( argc, argv, "-l" ) + 1], "%lg", &L );
+    sscanf ( argv[chkarg ( argc, argv, "-L" ) + 1], "%lg", &L );
+  }
+  if ( chkarg ( argc, argv, "-Pdyn" ) != 0 ) {
+    l_flag = TRUE;
+    sscanf ( argv[chkarg ( argc, argv, "-Pdyn" ) + 1], "%lg", &Pdynamic );
+  }
+  if ( chkarg ( argc, argv, "-T3" ) != 0 ) {
+    l_flag = TRUE;
+    sscanf ( argv[chkarg ( argc, argv, "-T3" ) + 1], "%lg", &T3 );
   }
   if ( m_flag && l_flag ) {
     validOptions = TRUE;
@@ -64,14 +72,14 @@ int main ( int argc, char **argv ) {
     fprintf ( stderr, "\nFlags:\n\n"
               "Flag  \tArg                              \tArg Type \tRequired? \n"
               "----------------------------------------------------------------------------\n"
-              "-m   \t<flight Mach number [m/s]>       \tdouble   \tY\n"
-              "-l   \t<length of the inlet [m]>        \tdouble   \tY\n" "\n\n" );
+              "-M   \t<flight Mach number [m/s]>       \tdouble   \tY\n"
+              "-Pdyn\t<flight dynamic pressure [Pa]>   \tdouble   \tY\n"
+              "-T3  \t<temperature at inlet exit [K]>  \tdouble   \tY\n"
+              "-L   \t<length of the inlet [m]>        \tdouble   \tY\n" "\n\n" );
 
   } else {
-    T3 = 1150.0e0;
     gamma = 1.4e0;
     Rgas = 287.06e0;
-    Pdynamic = 67032.0e0;
     FindExtCompInletProps ( M1, L, Rgas,
                             T3, Pdynamic, gamma,
                             &T1, &T2, &P1, &P2, &P3, &Ms, &M2, &M3, &W1, &mdot, &altitude );
@@ -82,18 +90,21 @@ int main ( int argc, char **argv ) {
     W2 = W1 * ( P1 / T1 * U1 ) / ( P2 / T2 * U2 );
     W3 = W2 * ( P2 / T2 * U2 ) / ( P3 / T3 * U3 );
 
-    printf ( "Altitude [m]  "
-             "Ms            "
-             "mdot [kg/ms]  "
-             "W1 [m]        "
-             "W2 [m]        "
-             "W3 [m]        "
-             "M1            "
-             "M2            "
-             "M3            "
-             "P1 [Pa]       "
-             "P2 [Pa]       " "P3 [Pa]       " "T1 [K]        " "T2 [K]        " "T3 [K]        \n" );
-    printf ( "%E  %E  %E  %E  %E  %E  %E  %E  %E  %E  %E  %E  %E  %E  %E\n",
+    printf ( "Altitude [m]  : %E\n"
+             "Ms            : %E\n"
+             "mdot [kg/ms]  : %E\n"
+             "W1 [m]        : %E\n"
+             "W2 [m]        : %E\n"
+             "W3 [m]        : %E\n"
+             "M1            : %E\n"
+             "M2            : %E\n"
+             "M3            : %E\n"
+             "P1 [Pa]       : %E\n"
+             "P2 [Pa]       : %E\n" 
+             "P3 [Pa]       : %E\n" 
+             "T1 [K]        : %E\n" 
+             "T2 [K]        : %E\n" 
+             "T3 [K]        : %E\n" ,
              altitude, Ms, mdot, W1, W2, W3, M1, M2, M3, P1, P2, P3, T1, T2, T3 );
   }
 
